--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -29,4 +29,5 @@
     <string name="october">октябрь</string>
     <string name="november">ноябрь</string>
     <string name="december">декабрь</string>
+    <string name="create_date_error">Дата(время) окончания должна быть после даты (времени) начала</string>
 </resources>
